# tfm-master

./: README.md
coap_server/: CMakeLists.txt  prj.conf
coap_server/src/: coap_server.c  ot_coap_utils.c  ot_coap_utils.h
mesh_protocol/: CMakeLists.txt  README.rst  microbit_gatt.conf  prj.conf  sample.yaml
mesh_protocol/boards/: bbc_microbit.conf  nrf5340dk_nrf5340_cpuapp_ns.conf
mesh_protocol/include/: coap_client.h  coap_server_client_interface.h  fsm_mesh.h  fsm_protocol_controller.h  fsm_thread.h  hts221.h  hts221_defines.h  iris_boardv1.h  model_handler.h
mesh_protocol/src/: coap_client.c  coap_client_utils.c  fsm.c  fsm_mesh.c  fsm_protocol_controller.c  fsm_thread.c  hts221.c  main.c  model_handler.c
multiprotocol_app/multi_protocol/: CMakeLists.txt  prj.conf
multiprotocol_app/multi_protocol/include/: coap_client.h  coap_client_utils.h  fsm_mesh.h  fsm_protocol_controller.h  fsm_thread.h  main.h
multiprotocol_app/multi_protocol/src/: coap_client.c  coap_client_utils.c  fsm_mesh.c  fsm_protocol_controller.c  fsm_thread.c  main.c  model_handler.c
promela/: multiprotocolo.pml
sensor_client/: CMakeLists.txt  prj.conf
sensor_client/include/: model_handler.h
sensor_client/src/: main.c  model_handler.c
